--- a/public/loitering.html
+++ b/public/loitering.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedPlane - Loitering Event Analysis</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <style>
+        /* Remove body and html rules, keep only page-specific styles */
         #event-container {
             display: flex;
             flex-direction: row;
@@ -15,6 +16,8 @@
         #event-map {
             flex: 2;
             height: 100%;
+            margin: 0;
+            padding: 0;
         }
         #event-info {
             flex: 1;
