--- a/public/index.html
+++ b/public/index.html
@@ -32,14 +32,16 @@
     </style>
 </head>
 <body>
-    <div id="map"></div>
-    <div id="info-panel">
-        <h2>Loitering Events</h2>
-        <div id="events-table-container">
-            <div class="loading">Loading events...</div>
+    <div id="main-container">
+        <div id="map"></div>
+        <div id="info-panel">
+            <h2>Loitering Events</h2>
+            <div id="events-table-container">
+                <div class="loading">Loading events...</div>
+            </div>
+            <h2>Aircraft Information</h2>
+            <div id="aircraft-list"></div>
         </div>
-        <h2>Aircraft Information</h2>
-        <div id="aircraft-list"></div>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
